src/frontend/parser/mod.rs
use super::lexer::Lexer;
use super::lexer::token::{Token, TokenType, TokenAttribute};
use super::ast::{ AstNode, AstByte, AstInteger, AstLong };

use crate::common::{
    variable_attributes::VariableAttribute,
    types::Type,
    node_info::*,
    error_reporter::{ErrorReporter, ReportKind},
};

use std::cell::RefCell;
use std::rc::Rc;

pub struct Parser {
    lexer: Box<dyn Lexer>,
    error_reporter: Rc<RefCell<dyn ErrorReporter>>,
    loop_depth: i32,
}

impl Parser {
    pub fn new(
        lexer: Box<dyn Lexer>,
        error_reporter: Rc<RefCell<dyn ErrorReporter>>) -> Parser {
        Parser {
            lexer,
            error_reporter,
            loop_depth: 0,
        }
    }

    pub fn parse(&mut self) -> AstNode {
        let top_level_tokens = vec![TokenType::Fn, TokenType::Extern, TokenType::Const];
        let mut nodes = vec![];
        loop {
            let token = self.lexer.peek_token();
            match token.token_type {
                TokenType::Extern => {
                    match self.parse_external_function_declaration() {
                        Ok(declaration) => nodes.push(declaration),
                        Err(_) =>
                            self.skip_to_first_of(top_level_tokens.clone()),
                    }
                },
                TokenType::Fn => {
                    match self.parse_function() {
                        Ok(function_node) => nodes.push(function_node),
                        Err(_) =>
                            self.skip_to_first_of(top_level_tokens.clone()),
                    }
                },
                TokenType::Const => {
                    match self.parse_variable_declaration() {
                        Ok(const_node) => {
                            nodes.push(const_node);
                            match self.expect_one_of(vec![TokenType::SemiColon]) {
                                Ok(_) => (),
                                Err(_) => self.skip_to_first_of(top_level_tokens.clone()),
                            }
                        },
                        Err(_) =>
                            self.skip_to_first_of(top_level_tokens.clone()),
                    }
                },
                TokenType::Let | TokenType::Val => {
                    self.report_error(
                        ReportKind::SyntaxError,
                        Span::from(&token),
                        "Variable declarations are not allowed at global scope (consider using constant if applicable)".to_owned(),
                    );
                    self.skip_to_first_of(top_level_tokens.clone());
                },
                TokenType::Eof =>
                    return AstNode::Block{
                        statements: nodes,
                        block_symbol_table_entry: None,
                        span: Span::new(0, 0, 0),
                    },
                _ => {
                    self.report_unexpected_token_mul(
                        &top_level_tokens, &token);
                    self.skip_to_first_of(top_level_tokens.clone());
                },
            }
        }
    }

    fn parse_function(&mut self) -> Result<AstNode, ()> {
        self.expect(TokenType::Fn)?;
        let identifier = self.expect(TokenType::Identifier)?;
        self.expect(TokenType::LParen)?;
        let params = self.parse_parameter_list()?;
        self.expect(TokenType::RParen)?;

        let type_token = if self.lexer.peek_token().token_type == TokenType::Colon {
            self.expect(TokenType::Colon)?;
            self.expect_one_of(TokenType::get_type_tokens())?
        } else {
            Token {
                token_type: TokenType::Void,
                attribute: None,
                line: 0,
                column: 0,
                length: 0
            }
        };

        let node = self.parse_block()?;
        let mut func_info = FunctionInfo::new(
            (&identifier).into(),
                identifier.into(),
                type_token.into());

        func_info.parameters = params;

        let func_node = AstNode::Function{
            block: Box::new(node),
            function_info: func_info };

        Ok(func_node)
    }

    fn parse_external_function_declaration(&mut self) -> Result<AstNode, ()> {
        self.expect(TokenType::Extern)?;
        self.expect(TokenType::Fn)?;
        let identifier = self.expect(TokenType::Identifier)?;
        self.expect(TokenType::LParen)?;
        let params = self.parse_parameter_list()?;
        self.expect(TokenType::RParen)?;

        let type_token = if self.lexer.peek_token().token_type == TokenType::Colon {
            self.expect(TokenType::Colon)?;
            self.expect_one_of(TokenType::get_type_tokens())?
        } else {
            Token {
                token_type: TokenType::Void,
                attribute: None,
                line: 0,
                column: 0,
                length: 0
            }
        };

        self.expect(TokenType::SemiColon)?;


        let mut func_info = FunctionInfo::new(
            (&identifier).into(),
            identifier.into(),
            type_token.into());

        func_info.parameters = params;

        Ok(AstNode::ExternFunction{ function_info: func_info})
    }

    fn parse_parameter_list(&mut self) -> Result<Vec<DeclarationInfo>, ()> {
        let mut params = vec![];
        let token_type = self.lexer.peek_token().token_type;
        if token_type == TokenType::Identifier || token_type == TokenType::Val {
            loop {
                let mut identifier = self.expect_one_of(vec![TokenType::Identifier, TokenType::Val])?;
                let is_read_only = if identifier.token_type == TokenType::Val {
                    identifier = self.expect(TokenType::Identifier)?;
                   true
                } else {
                    false
                };

                self.expect(TokenType::Colon)?;
                let var_type = self.expect_one_of(TokenType::get_type_tokens())?;
                let mut decl = DeclarationInfo::new((&identifier).into(), identifier.into(), var_type.into());
                if is_read_only {
                    decl.attributes.insert(VariableAttribute::ReadOnly);
                }

                if let TokenType::LBracket = self.lexer.peek_token().token_type {
                    self.expect(TokenType::LBracket)?;
                    self.expect(TokenType::RBracket)?;

                    // update type to array type
                    decl.variable_type = Type::Reference(Box::new(Type::Array(Box::new(decl.variable_type), vec![])));
                }

                params.push(decl);

                if let TokenType::Comma = self.lexer.peek_token().token_type {
                    self.expect(TokenType::Comma)?;
                } else {
                    break;
                }
            }
        }

        Ok(params)
    }

    fn parse_block(&mut self) -> Result<AstNode, ()> {
        self.expect(TokenType::LBrace)?;
        let nodes = self.parse_statements()?;
        self.expect(TokenType::RBrace)?;

        let block = AstNode::Block {
            statements: nodes,
            block_symbol_table_entry: None,
            span: Span::new(0, 0, 0),
        };

        Ok(block)
    }

    fn parse_statements(&mut self) -> Result<Vec<AstNode>, ()> {
        let mut nodes = vec![];
        loop {
            let token = self.lexer.peek_token();
            let res = match token.token_type {
                TokenType::SemiColon => {
                    self.lexer.next_token();
                    continue;
                },
                TokenType::Let | TokenType::Const | TokenType::Val => {
                    let res = self.parse_variable_declaration();
                    if let Err(_) = res {
                        self.skip_to_first_of(vec![TokenType::SemiColon]);
                    }
                    self.expect(TokenType::SemiColon)?;
                    res
                }
                TokenType::LBrace =>
                    self.parse_block(),
                TokenType::Identifier =>
                    self.parse_function_call_or_assignment(),
                TokenType::Return =>
                    self.parse_return_statement(),
                TokenType::While =>
                    self.parse_while_statement(),
                TokenType::For =>
                    self.parse_for_statement(),
                TokenType::If =>
                    self.parse_if_statement(),
                TokenType::Break =>
                    self.handle_break(),
                TokenType::Continue =>
                    self.handle_continue(),
                _ => return Ok(nodes)
            };

            match res {
                Ok(node) => nodes.push(node),
                Err(_) => self.skip_to_first_of(
                    vec![
                        TokenType::SemiColon,
                        TokenType::RBrace]),
            }
        }
    }

    fn handle_break(&mut self) -> Result<AstNode,()> {
        let break_token = self.expect(TokenType::Break)?;
        if self.loop_depth == 0 {
            self.report_error(
                ReportKind::SyntaxError,
                Span::from(&break_token),
                "Break statement outside loop body".to_owned(),

            );
            return Err(());
        }

        Ok(AstNode::Break(Span::from(&break_token)))
    }

    fn handle_continue(&mut self) -> Result<AstNode, ()>  {
        let continue_token = self.expect(TokenType::Continue)?;
        if self.loop_depth == 0 {
            self.report_error(
                ReportKind::SyntaxError,
                Span::from(&continue_token),
                "Continue statement outside loop body".to_owned(),

            );
            return Err(());
        }
        Ok(AstNode::Continue(Span::from(&continue_token)))
    }

    fn parse_variable_declaration(&mut self) -> Result<AstNode, ()> {
        let variable_type = self.expect_one_of(vec![TokenType::Let, TokenType::Const, TokenType::Val])?;

        let attribute = match variable_type.token_type {
            TokenType::Const => {
                Some(VariableAttribute::Const)
            },
            TokenType::Val => {
                Some(VariableAttribute::ReadOnly)
            },
            _ => None
        };


        let identifier = self.expect(TokenType::Identifier)?;
        let var_type = if self.lexer.peek_token().token_type == TokenType::Equals {
            Type::Uninitialized
        } else {
            self.expect(TokenType::Colon)?;
            let var_type = self.expect_one_of(TokenType::get_type_tokens())?;
            // Array parse & custom error handling for missing initialization
            let next_token = self.lexer.peek_token();
            if next_token.token_type == TokenType::LBracket {
                    return self.parse_array_declaration(identifier, var_type, attribute);
            };

            Type::from(var_type)
        };



        let mut declaration_info = DeclarationInfo::new(
            (&identifier).into(),
            (&identifier).into(),
            var_type,
        );
        if let Some(attribute) = attribute {
            declaration_info.attributes.insert(attribute);
        }

        // Custom error handling for case where expression is missing
        let next_token = self.lexer.peek_token();
        let expression_node = match next_token.token_type {
            TokenType::Equals => {
                self.lexer.next_token(); // pop the token we peeked before array handling
                self.parse_expression()?
            }, // ok
            TokenType::SemiColon => {
                self.report_error(
                    ReportKind::SyntaxError,
                    Span::new(identifier.line, identifier.column, identifier.length),
                    format!("Variable declaration must be followed by initialization"));
                AstNode::ErrorNode
            },
            _ => {
                self.report_unexpected_token(
                    TokenType::Equals,
                    &next_token);
                return Err(());
            },
        };

        let declaration = AstNode::VariableDeclaration{
            initialization_expression: Box::new(expression_node.clone()),
            declaration_info: declaration_info.clone()
        };

        let declaration = if let AstNode::InitializerList { .. } = expression_node {
           if declaration_info.variable_type == Type::Uninitialized {
              AstNode::ArrayDeclaration {
                  initialization_expression: Box::new(expression_node),
                  dimensions: vec![],
                  declaration_info: declaration_info,
              }
           } else {
               declaration
           }
        } else {
            declaration
        };


        Ok(declaration)
    }

    fn parse_array_declaration(
        &mut self,
        identifier: Token,
        var_type: Token,
        attribute: Option<VariableAttribute>) -> Result<AstNode, ()> {

        // TODO: Support for multidimensional arrays
        let mut dimensions = vec![];
        self.expect(TokenType::LBracket)?;
        if self.lexer.peek_token().token_type != TokenType::RBracket {
            dimensions.push(self.parse_expression()?);
        }
        self.expect(TokenType::RBracket)?;

        let array_type = match (&var_type).into() {
            var_type @ Type::Long |
            var_type @ Type::Integer |
            var_type @ Type::Boolean |
            var_type @ Type::Byte => Type::Array(Box::new(var_type), vec![]),
            bad_type => {
                self.report_error(
                    ReportKind::SyntaxError,
                    Span::from(var_type),
                    format!("{} is not valid base type for an array", bad_type)
                );
                Type::Invalid
            },
        };

        let mut declaration_info = DeclarationInfo::new(
            (&identifier).into(),
            (&identifier).into(),
            array_type);

        if let Some(attribute) = attribute {
            declaration_info.attributes.insert(attribute);
        }

        let next_token = self.lexer.peek_token();
        // Custom error handling for case where expression is missing
        let expression_node = match next_token.token_type {
            TokenType::Equals => {
                self.lexer.next_token();
                self.parse_expression()?
            }, // ok
            TokenType::SemiColon => {
                self.report_error(
                    ReportKind::SyntaxError,
                    Span::new(identifier.line, identifier.column, identifier.length),
                    format!("Variable declaration must be followed by initialization"));
                AstNode::ErrorNode
            },
            _ => {
                self.report_unexpected_token(
                    TokenType::Equals,
                    &next_token);
                return Err(());
            },
        };

        let declaration = AstNode::ArrayDeclaration{
            initialization_expression: Box::new(expression_node),
            dimensions,
            declaration_info
        };

        Ok(declaration)
    }

    fn parse_function_call_or_assignment(&mut self) -> Result<AstNode, ()> {
        let identifier = self.expect(TokenType::Identifier)?;
        let token  = self.lexer.peek_token();
        match token.token_type {

            TokenType::LBracket |
            TokenType::Equals |
            TokenType::PlusEquals |
            TokenType::MinusEquals |
            TokenType::StarEquals |
            TokenType::ForwardSlashEquals |
            TokenType::PercentageEquals |
            TokenType::DoubleArrowRightEquals |
            TokenType::TripleArrowRightEquals |
            TokenType::DoubleArrowLeftEquals |
            TokenType::CaretEquals |
            TokenType::AmpersandEquals |
            TokenType::PipeEquals => {
                let node = self.parse_assignment_expression(identifier)?;
                self.expect(TokenType::SemiColon)?;
                return Ok(node);

            }
            TokenType::LParen => {
                let node = self.parse_function_call(identifier)?;
                self.expect(TokenType::SemiColon)?;
                return Ok(node);
            }

            _ => {
                self.report_unexpected_token_mul(
                    &vec![
                        TokenType::Equals,
                        TokenType::PlusEquals,
                        TokenType::MinusEquals,
                        TokenType::StarEquals,
                        TokenType::ForwardSlashEquals,
                        TokenType::PercentageEquals,
                        TokenType::DoubleArrowLeftEquals,
                        TokenType::DoubleArrowRightEquals,
                        TokenType::TripleArrowRightEquals,
                        TokenType::AmpersandEquals,
                        TokenType::PipeEquals,
                        TokenType::CaretEquals,
                        TokenType::LParen,
                        TokenType::LBracket],
                    &token);
                Err(())
            },
        }
    }

    fn parse_assignment_expression(&mut self, identifier: Token) -> Result<AstNode, ()> {
        match self.lexer.peek_token().token_type {
            TokenType::LBracket => self.parse_array_assignment(identifier),
            _ => self.parse_assignment(identifier),
        }
    }

    fn parse_assignment(&mut self, identifier: Token) -> Result<AstNode, ()> {
        let op = self.expect_one_of(vec![
            TokenType::Equals,
            TokenType::PlusEquals,
            TokenType::MinusEquals,
            TokenType::StarEquals,
            TokenType::ForwardSlashEquals,
            TokenType::PercentageEquals,
            TokenType::DoubleArrowLeftEquals,
            TokenType::DoubleArrowRightEquals,
            TokenType::TripleArrowRightEquals,
            TokenType::AmpersandEquals,
            TokenType::PipeEquals,
            TokenType::CaretEquals,
        ])?;

        let expression_node = self.parse_expression()?;

        let name = if let Some(TokenAttribute::Text(ref ident)) = identifier.attribute {
            ident.clone()
        } else {
            ice!("Non-identifier token '{}' passed to parse_assignment",
                identifier);
        };

        let expression_node = self.get_assignment_node(
            op,
            Box::new(AstNode::Identifier{ name: name.clone(), span: Span::from(&identifier)}),
            Box::new(expression_node));

        Ok(AstNode::VariableAssignment{
            expression: Box::new(expression_node),
            name,
            span: Span::from(&identifier)
        })
    }

    fn parse_function_call(
        &mut self,
        identifier: Token) -> Result<AstNode, ()>  {

        let name = if let Some(TokenAttribute::Text(ref ident)) = identifier.attribute {
            ident.clone()
        } else {
            ice!("Non-identifier token '{}' passed to parse_function_call",
                identifier);
        };

        let mut args = vec![];
        self.expect(TokenType::LParen)?;
        if self.lexer.peek_token().token_type != TokenType::RParen {
            loop {
                args.push(self.parse_expression()?);
                if self.lexer.peek_token().token_type == TokenType::Comma {
                    self.expect(TokenType::Comma)?;
                } else {
                    break;
                }
            }
        }

        self.expect(TokenType::RParen)?;
        Ok(AstNode::FunctionCall {
            arguments: args,
            function_name: name,
            span: Span::from(identifier)
        })
    }

    fn parse_array_assignment(&mut self, identifier: Token) -> Result<AstNode, ()> {
        self.expect(TokenType::LBracket)?;

        let name = if let Some(TokenAttribute::Text(ref ident)) = identifier.attribute {
            ident.clone()
        } else {
            ice!("Non-identifier token '{}' passed to parse_function_call",
                identifier);
        };

        let index_expression = self.parse_expression()?;
        self.expect(TokenType::RBracket)?;

        let op = self.expect_one_of(vec![
            TokenType::Equals,
            TokenType::PlusEquals,
            TokenType::MinusEquals,
            TokenType::StarEquals,
            TokenType::ForwardSlashEquals,
            TokenType::PercentageEquals,
            TokenType::TripleArrowRightEquals,
            TokenType::DoubleArrowLeftEquals,
            TokenType::DoubleArrowRightEquals,
            TokenType::AmpersandEquals,
            TokenType::PipeEquals,
            TokenType::CaretEquals,
        ])?;

        let assignment_expression = self.parse_expression()?;

        let get_access = || {
            AstNode::ArrayAccess {
                index_expression: Box::new(index_expression.clone()),
                indexable_expression: Box::new(AstNode::Identifier{ name: name.clone(), span: Span::from(&identifier)}),
            }
        };

        let assignment_expression = self.get_assignment_node(
            op,
            Box::new(get_access()),
            Box::new(assignment_expression),
        );

        Ok(AstNode::ArrayAssignment{
            index_expression: Box::new(index_expression),
            assignment_expression: Box::new(assignment_expression),
            variable_name: name,
            span: Span::from(&identifier) })
    }

    fn get_assignment_node(&self, op: Token, left_expression: Box<AstNode>, right_expression: Box<AstNode>) -> AstNode {
        match op.token_type {
            TokenType::PlusEquals => AstNode::Plus {
                left_expression,
                right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(Span::from(&op))),
            },
            TokenType::MinusEquals => AstNode::Minus {
                left_expression,
                right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::StarEquals => AstNode::Multiply {
                left_expression,
                right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::ForwardSlashEquals => AstNode::Divide {
                left_expression,
                right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::PercentageEquals => AstNode::Modulo {
                left_expression,
                right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::DoubleArrowLeftEquals => AstNode::LogicalShiftLeft {
                value: left_expression,
                shift_count: right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::DoubleArrowRightEquals => AstNode::ArithmeticShiftRight {
                value: left_expression,
                shift_count: right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::TripleArrowRightEquals => AstNode::LogicalShiftRight {
                value: left_expression,
                shift_count: right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::AmpersandEquals => AstNode::BitwiseAnd {
                left_expression,
                right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::PipeEquals => AstNode::BitwiseOr {
                left_expression,
                right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::CaretEquals => AstNode::BitwiseXor {
                left_expression,
                right_expression,
                arithmetic_info: ArithmeticInfo::new(Span::from(&op)),
            },
            TokenType::Equals => *right_expression,
            bad => ice!("Bad expression type {}", bad),
        }
    }

    fn parse_return_statement(&mut self) -> Result<AstNode, ()> {
        let return_node = self.expect(TokenType::Return)?;

        let token = self.lexer.peek_token();
        let node = if token.token_type != TokenType::SemiColon {
            Some(Box::new(self.parse_expression()?))
        } else {
            None
        };

        self.expect(TokenType::SemiColon)?;


        Ok(AstNode::Return{
            return_value: node,
            arithmetic_info: ArithmeticInfo::new(Span::from(&return_node))})
    }

    fn parse_while_statement(&mut self) -> Result<AstNode, ()> {
        let while_node = self.expect(TokenType::While)?;
        let expr = self.parse_expression()?;
        self.loop_depth += 1;
        let block = self.parse_block()?;
        self.loop_depth -= 1;

        Ok(AstNode::Loop {
            condition_expression: Box::new(expr),
            post_body_statements: None,
            block: Box::new(block),
            span: Span::from(while_node)})
    }

    // syntactic sugar around while statement
    //
    //  for (init_statement,init_statement; condition; post-expression, post-expression) {
    //      body
    //  }
    //
    //  generates
    //
    //  {
    //      init_statements;
    //      while condition {
    //          body
    //          post-expressions;
    //      }
    //   }
    //
    //  Init statement may be variable declaration, or assignment expression. Other statements are not allowed
    //  Post expression must be variable assignment

    fn parse_for_statement(&mut self) -> Result<AstNode, ()> {

        let for_node = self.expect(TokenType::For)?;

        let mut statements = vec![];
        let mut post_statements = vec![];

        loop {
            let t_type = self.lexer.peek_token().token_type;
            let node = if t_type == TokenType::SemiColon {
                break;
            } else if t_type  == TokenType::Let || t_type == TokenType::Const || t_type == TokenType::Val {
                self.parse_variable_declaration()
            } else if t_type == TokenType::Identifier {
                let identifier = self.lexer.next_token();
                self.parse_assignment_expression(identifier)
            } else {
                let span = Span::from(self.lexer.peek_token());
                self.report_error(
                    ReportKind::SyntaxError,
                    span,
                    "Expected variable initialization or assignment".to_owned()
                );
                Err(())
            };

            // custom error handling, try skipping and parsing rest of the statements
            let s = match node {
                Err(_) | Ok(AstNode::ErrorNode) => {
                    self.skip_to_first_of(
                    vec![
                        TokenType::LBrace,
                        TokenType::RBrace,
                        TokenType::SemiColon,
                        ]
                    );
                    AstNode::ErrorNode
                }
                Ok(x) => x,
            };

            statements.push(s);

            if self.lexer.peek_token().token_type == TokenType::Comma {
               self.lexer.next_token();
            } else {
                break;
            }
        }

        self.expect(TokenType::SemiColon)?;

        let cond_expression =  if self.lexer.peek_token().token_type == TokenType::SemiColon {
            AstNode::Boolean{ value: true, span: Span::new(0, 0, 0) }
        } else {
            match self.parse_expression() {
                Err(_) | Ok(AstNode::ErrorNode) => {
                    self.skip_to_first_of(
                        vec![
                            TokenType::LBrace,
                            TokenType::RBrace,
                            TokenType::SemiColon,
                        ]
                    );

                    AstNode::ErrorNode
                }
                Ok(x) => x
            }
        };

        self.expect(TokenType::SemiColon)?;

        loop {

            if self.lexer.peek_token().token_type == TokenType::LBrace {
               break;
            }

            let statement = match self.expect(TokenType::Identifier) {
                Ok(identifier) if identifier.token_type == TokenType::Identifier => {
                    match self.parse_assignment_expression(identifier) {
                        Err(_) | Ok(AstNode::ErrorNode) => {
                            self.skip_to_first_of(
                                vec![
                                    TokenType::LBrace,
                                    TokenType::RBrace,
                                    TokenType::SemiColon,
                                ]
                            );
                            AstNode::ErrorNode
                        },
                        Ok(x) => x,
                    }
                },
                _ =>  {
                    self.skip_to_first_of(
                        vec![
                            TokenType::LBrace,
                            TokenType::RBrace,
                            TokenType::SemiColon,
                        ]
                    );
                    AstNode::ErrorNode
                }
            };


            post_statements.push(statement);

            if self.lexer.peek_token().token_type == TokenType::Comma {
                self.lexer.next_token();
            } else {
                break;
            }
        }

        self.loop_depth += 1;
        let while_block = self.parse_block()?;
        self.loop_depth -= 1;

        statements.push(
            AstNode::Loop {
                condition_expression: Box::new(cond_expression),
                post_body_statements: Some(post_statements),
                block: Box::new(while_block),
                span: Span::from(for_node)});

        let block = AstNode::Block{
            statements,
            block_symbol_table_entry: None,
            span: Span::new(0,0,0)
        };

        Ok(block)
    }

    fn parse_if_statement(&mut self) -> Result<AstNode, ()> {
        let if_node = self.expect(TokenType::If)?;
        let expr = self.parse_expression()?;
        let block = self.parse_block()?;

        let token = self.lexer.peek_token();

        let opt_else_blk = if token.token_type == TokenType::Else {
            let else_blk = self.parse_else_block()?;
            Some(Box::new(else_blk))
        } else {
            None
        };

        Ok(AstNode::If{
            condition_expression: Box::new(expr),
            main_block: Box::new(block),
            else_block: opt_else_blk,
            span: Span::from(if_node)})
    }

    fn parse_else_block(&mut self) -> Result<AstNode, ()> {
        self.expect(TokenType::Else)?;
        let token = self.lexer.peek_token();
        if token.token_type == TokenType::If {
            self.parse_if_statement()
        } else {
            self.parse_block()
        }
    }

    fn parse_expression(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_arithmetic_expression_with_boolean_and()?;

        loop {
            let next_token = self.lexer.peek_token();

            match next_token.token_type {
                TokenType::DoublePipe => {
                    node = self.parse_boolean_or_expression(node)?
                }
                _ => break,
            }
        }

        Ok(node)
    }

    fn parse_arithmetic_expression_with_boolean_and(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_arithmetic_expression_with_equals_not_equals_comparisons()?;

        loop {
            let next_token = self.lexer.peek_token();
            if next_token.token_type == TokenType::DoubleAmpersand {
                node = self.parse_boolean_and_expression(node)?;
            } else {
                break;
            }
        }

        Ok(node)
    }

    fn parse_arithmetic_expression_with_equals_not_equals_comparisons(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_arithmetic_expression_with_greater_less_comparisons()?;

        loop {
            let next_token = self.lexer.peek_token();
            if next_token.token_type == TokenType::DoubleEquals ||
                next_token.token_type == TokenType::ExclamationEquals {
                node = self.parse_equals_not_equals_comparison_expression(node)?;
            } else {
                break;
            }
        }

        Ok(node)
    }

    fn parse_arithmetic_expression_with_greater_less_comparisons(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_bitwise_or_expressions()?;

        loop {
            let next_token = self.lexer.peek_token();

            const TOKENS: [TokenType; 4] = [
                TokenType::ArrowRight,
                TokenType::ArrowRightEquals,
                TokenType::ArrowLeft,
                TokenType::ArrowLeftEquals,
            ];

            if TOKENS.contains(&next_token.token_type) {
                    node = self.parse_greater_less_comparison_expression(node)?;
                } else {
                break;
            }
        }

        Ok(node)
    }

    fn parse_bitwise_or_expressions(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_bitwise_xor_expressions()?;

        loop {
            let next_token = self.lexer.peek_token();
            if next_token.token_type == TokenType::Pipe {
                node = self.parse_bitwise_or(node)?;
            } else {
                break;
            }
        }

        Ok(node)
    }

    fn parse_bitwise_or(&mut self, node: AstNode) -> Result<AstNode, ()> {
        let token = self.expect(TokenType::Pipe)?;
        let expression = self.parse_bitwise_xor_expressions()?;

        Ok(AstNode::BitwiseOr{
            left_expression: Box::new(node),
            right_expression: Box::new(expression),
            arithmetic_info: ArithmeticInfo::new(Span::from(token)),
        })
    }

    fn parse_bitwise_xor_expressions(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_bitwise_and_expressions()?;

       loop {
            let next_token = self.lexer.peek_token();
            if next_token.token_type == TokenType::Caret {
                node = self.parse_bitwise_xor(node)?;
            } else {
                break;
            }
        }

        Ok(node)
    }

    fn parse_bitwise_xor(&mut self, node: AstNode) -> Result<AstNode, ()> {
        let token = self.expect(TokenType::Caret)?;
        let expression = self.parse_bitwise_and_expressions()?;

        Ok(AstNode::BitwiseXor{
            left_expression: Box::new(node),
            right_expression: Box::new(expression),
            arithmetic_info: ArithmeticInfo::new(Span::from(token)),
        })
    }

    fn parse_bitwise_and_expressions(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_shift_expressions()?;

        loop {
            let next_token = self.lexer.peek_token();
            if next_token.token_type == TokenType::Ampersand {
                node = self.parse_bitwise_and(node)?;
            } else {
                break;
            }
        }

        Ok(node)
    }

    fn parse_bitwise_and(&mut self, node: AstNode) -> Result<AstNode, ()> {
        let token = self.expect(TokenType::Ampersand)?;
        let expression = self.parse_shift_expressions()?;

        Ok(AstNode::BitwiseAnd{
            left_expression: Box::new(node),
            right_expression: Box::new(expression),
            arithmetic_info: ArithmeticInfo::new(Span::from(token)),
        })
    }

    fn parse_shift_expressions(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_arithmetic_expression()?;

        loop {
            let next_token = self.lexer.peek_token();
            if next_token.token_type == TokenType::DoubleArrowLeft ||
                next_token.token_type == TokenType::DoubleArrowRight ||
                next_token.token_type == TokenType::TripleArrowRight {
                node = self.parse_shift(node)?;
            } else {
                break;
            }
        }

        Ok(node)
    }

    fn parse_shift(&mut self, node: AstNode) -> Result<AstNode, ()> {
        let shift_token = self.expect_one_of(
            vec![
                TokenType::DoubleArrowLeft,
                TokenType::DoubleArrowRight,
                TokenType::TripleArrowRight])?;

        let shift_count = self.parse_arithmetic_expression()?;

        match shift_token.token_type {
            TokenType::DoubleArrowLeft => {
                Ok(AstNode::LogicalShiftLeft { value: Box::new(node),  shift_count: Box::new(shift_count), arithmetic_info: ArithmeticInfo::new(Span::from(&shift_token)) })
            },
            TokenType::DoubleArrowRight => {
                Ok(AstNode::ArithmeticShiftRight { value: Box::new(node),  shift_count: Box::new(shift_count), arithmetic_info: ArithmeticInfo::new(Span::from(&shift_token)) })
            },
            TokenType::TripleArrowRight => {
                Ok(AstNode::LogicalShiftRight { value: Box::new(node),  shift_count: Box::new(shift_count), arithmetic_info: ArithmeticInfo::new(Span::from(&shift_token)) })
            },
            _ => ice!("Unexpected token {:?} when parsing shift expression", shift_token),
        }

    }

    fn parse_arithmetic_expression(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_term()?;

        loop {
            let next_token = self.lexer.peek_token();
            // custom error handling for missing operator
            if self.starts_operand(&next_token) {
                self.report_error(
                    ReportKind::SyntaxError,
                    Span::new(next_token.line, next_token.column, next_token.length),
                    format!(
                        "Unexpected token '{}'. Missing operator?",
                        next_token.token_type));

                // consume the token
                self.lexer.next_token();
                return Err(());
            }

            match next_token.token_type {
                TokenType::Plus | TokenType::Minus =>
                    node = self.parse_plus_minus_expression(node)?,
                _ => break,
            }
        }
        Ok(node)
    }

    fn parse_term(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_cast()?;

        // while mul or div tokens are next, keep parsing
        loop {
            let next_token = self.lexer.peek_token();
            match next_token.token_type {
                TokenType::Star | TokenType::ForwardSlash | TokenType::Percentage =>
                    node = self.parse_mult_divide_modulo_expression(node)?,
                _ => break,
            }
        }
        Ok(node)
    }


    fn parse_cast(&mut self) -> Result<AstNode, ()> {
        let mut node = self.parse_boolean_not()?;

        // while mul or div tokens are next, keep parsing
        loop {
